syntax = "proto3";

package chatservice;

// ChatService ...
service ChatService {
    rpc SendMessage(MessageRequest) returns (MessageResponse);
    rpc ReceiveMessages(UserStreamRequest) returns (stream Message);
}
 
 message MessageRequest {
    string chat_id = 1;
    string sender_id = 2;
    string content = 3;

 }

message MessageResponse {
    string status = 1;
}

message UserStreamRequest {
    string user_id = 1;
}

message Message {
    string chat_id = 1;
    string sender_id = 2;
    string content = 3;
    string timestamp = 4;
}